--- a/styles/animations.css
+++ b/styles/animations.css
@@ -42,7 +42,7 @@
 }
 
 .theme-menu__button {
-	transition: opacity 0.3s ease;
+	transition: transform 0.3s ease;
 }
 
 .theme-menu__button:hover {
@@ -72,7 +72,6 @@
 }
 
 .theme-menu__button:focus-visible::after {
-	transition: transform 0.3s ease;
 	transform: scaleX(1);
 }
 
@@ -92,15 +91,17 @@
 	outline-offset: -2px;
 }
 
+.primary-button {
+  transition: transform 0.5s ease-in-out;
+}
+
 .primary-button:hover:after {
-	transition: transform 0.5s ease-in-out;
 	transform: scaleX(1);
 }
 
 .primary-button:focus-visible {
 	box-shadow: 2px 2px 0 0 var(--accent-color);
 	outline: none;
-	transition: box-shadow 0.3s ease;
 }
 
 .primary-button::after {
@@ -132,7 +133,7 @@
 
 .like-icon .main-body {
 	fill: var(--bg-color);
-	transition: fill 0.3s 0.03s linear;
+	transition: fill 0.3s linear 0.03s;
 }
 
 .like-icon:hover .main-body {
