--- a/styles/style.css
+++ b/styles/style.css
@@ -67,7 +67,7 @@
 .theme-menu__list {
 	display: flex;
 	flex-direction: column;
-	gap: 10px;
+	gap: 0.8em;
 	inline-size: 84px;
 	padding-inline-start: 4px;
 }
@@ -174,8 +174,8 @@
 	padding: 0;
 	outline: none;
 	background-color: transparent;
-	block-size: 36px;
-	inline-size: 39px;
+	block-size: 38px;
+	inline-size: 38px;
 	cursor: pointer;
 }
 
@@ -254,7 +254,7 @@
 	filter: blur(2px) brightness(200%);
 }
 
-#save__dialog[open] {
+.save-dialog[open] {
 	display: flex;
 	flex-direction: column;
 	justify-content: center;
@@ -268,7 +268,7 @@
 	transition: opacity 2.3s ease-in-out;
 }
 
-#save__dialog[open]::backdrop {
+.save-dialog[open]::backdrop {
 	opacity: 0.75;
 	background-color: #000;
 }
@@ -316,7 +316,7 @@
 		block-size: 28px;
 	}
 
-	#save__dialog[open] {
+	.save-dialog[open] {
 		padding: 30px 42px;
 	}
 
